# akiro

./: .gitignore  .gitmodules  README.md  apt-requirements.txt  install_ros2_packages.yml  pip-requirements.txt  requirements.txt  shutdown_button.py
3d_models/: dynamixel_lego_adapter v4.stl  dynamixel_mounting_plate.3mf  dynamixel_mounting_plate.stl  robot_baseplate v2.3mf  spacer v3.3mf  spacer v3.stl
arduino/drive_bot/: drive_bot.ino
arduino/dynamixel_test/: dynamixel_test.ino
arduino/test_serial_com/: test_serial_com.ino
src/akiro/launch/: start_robot.launch.py
src/akiro_interfaces/: CMakeLists.txt  package.xml
src/akiro_interfaces/msg/: CpuLoad.msg
src/ball_chaser/launch/: start_robot.launch.py
src/ball_tracker/: package.xml  setup.py
src/ball_tracker/ball_tracker/: blob_detector.py  drive_bot.py  follow_ball.py  openrb_drive_bot.py  process_image.py  shutdown_button.py
src/ball_tracker/config/: twist_joy.yaml  twist_joy_logitech.yaml  twist_joy_xbox.yaml  twist_mux.yaml  xbox_twist_joy.yaml
src/ball_tracker/launch/: start_robot.launch.py  teleop_twist_joy.launch.py  teleop_twist_keyboard.launch.py  test_blob_detection.launch.py
src/ball_tracker/urdf/: akiro.urdf
src/euclidean_cluster/: CMakeLists.txt  package.xml
src/euclidean_cluster/src/: euclidean_cluster_node.cpp
src/image_pipeline/: package.xml  setup.cfg  setup.py
src/image_pipeline_bringup/: package.xml  setup.cfg  setup.py
src/image_pipeline_bringup/launch/: image_pipeline_launch.py
src/my_first_package/: package.xml  setup.py
src/my_first_package/config/: twist_joy_ps3.yaml  twist_mux.yaml
src/my_first_package/launch/: multiple_publisher.launch.py  my_first.launch.py  my_first_better.launch.py  pub_sub.launch.py  publisher.launch.py  shell.launch.py  teleop_twist_joy.launch.py  twist_mux.launch.py
src/my_first_package/my_first_package/: publisher.py  subscriber.py
src/plane_segmentation/: CMakeLists.txt  package.xml
src/plane_segmentation/src/: plane_seg_node.cpp
src/system_monitor/: CMakeLists.txt  package.xml
src/system_monitor/src/: system_monitor_node.cpp
src/voxel_filter/: CMakeLists.txt  package.xml
src/voxel_filter/src/: voxel_node.cpp
test_opencv/: detect_ball.py  pytest.ini  range_detector.py  test_detect_blob.py  test_find_circles.py  test_pyserial.py
(+1 files in other folders)
